--- a/cloudiness.html
+++ b/cloudiness.html
@@ -42,7 +42,7 @@
                                 <li><a href="temperature.html">Max Temperature</a></li>
                                 <li><a href="humidity.html">Humidity</a></li>
                                 <li><a href="cloudiness.html">Cloudiness</a></li>
-                                <li><a href="windwpeed.html">Wind Speed</a></li>
+                                <li><a href="windspeed.html">Wind Speed</a></li>
                             </ul>
                           </li>
                           <li><a href="comparison.html" class="menu1">Comparison</a></li>
@@ -67,7 +67,7 @@
                                 <hr>
                                 <div class="media">
                                         <div align="center">
-                                        <img src="Latitude vs. cloudiness Plot.png" alt="lat vs cloudiness" width="500px" height="420px">
+                                        <img src="Latitude vs. Cloudiness Plot.png" alt="lat vs cloudiness" width="500px" height="420px">
                                     </div>
                                     <br>
                                     There is no relationship between latitude and cloudiness.
@@ -97,7 +97,7 @@
                             <a href="temperature.html"><img src="Latitude vs. Temperature Plot.png" width="150px" height="150px"></a>
                             </div> 
                             <div class= "col-md-6 col-sm-3">
-                            <a href="windSpeed.html"><img src="Latitude vs. Wind Speed Plot.png" width="150px" height="150px"></a>
+                            <a href="windspeed.html"><img src="Latitude vs. Wind Speed Plot.png" width="150px" height="150px"></a>
                             </div> 
                         </div> 
                         </div>     
