--- a/comparison.html
+++ b/comparison.html
@@ -42,7 +42,7 @@
                                 <li><a href="temperature.html">Max Temperature</a></li>
                                 <li><a href="humidity.html">Humidity</a></li>
                                 <li><a href="cloudiness.html">Cloudiness</a></li>
-                                <li><a href="windwpeed.html">Wind Speed</a></li>
+                                <li><a href="windspeed.html">Wind Speed</a></li>
                             </ul>
                           </li>
                           <li><a href="comparison.html" class="menu1">Comparison</a></li>
