--- a/windspeed.html
+++ b/windspeed.html
@@ -42,7 +42,7 @@
                                 <li><a href="temperature.html">Max Temperature</a></li>
                                 <li><a href="humidity.html">Humidity</a></li>
                                 <li><a href="cloudiness.html">Cloudiness</a></li>
-                                <li><a href="windwpeed.html">Wind Speed</a></li>
+                                <li><a href="windspeed.html">Wind Speed</a></li>
                             </ul>
                           </li>
                           <li><a href="comparison.html" class="menu1">Comparison</a></li>
@@ -91,13 +91,13 @@
                             <a href="cloudiness.html"><img src="Latitude vs. Cloudiness Plot.png" width="150px" height="150px"></a>
                             </div> 
                             <div class= "col-md-6 col-sm-3">
-                            <a href="Humidity.html"><img src="Latitude vs. Humidity Plot.png" width="150px" height="150px"></a>
+                            <a href="humidity.html"><img src="Latitude vs. Humidity Plot.png" width="150px" height="150px"></a>
                             </div> 
                             <div class= "col-md-6 col-sm-3">
-                            <a href="Temperature.html"><img src="Latitude vs. Temperature Plot.png" width="150px" height="150px"></a>
+                            <a href="temperature.html"><img src="Latitude vs. Temperature Plot.png" width="150px" height="150px"></a>
                             </div> 
                             <div class= "col-md-6 col-sm-3">
-                            <a href="WindSpeed.html"><img src="Latitude vs. Wind Speed Plot.png" width="150px" height="150px"></a>
+                            <a href="windspeed.html"><img src="Latitude vs. Wind Speed Plot.png" width="150px" height="150px"></a>
                             </div> 
                         </div> 
                         </div>     
